--- a/main.css
+++ b/main.css
@@ -5,6 +5,26 @@ html, body {
   padding: 0; 
 }
 
+#accounts {
+  background-color: #ddd;
+  height: 20%;
+  min-height: 100px;
+}
+
 #map { 
-  height: 100%; 
+  height: 80%; 
+}
+
+#floating-panel {
+  position: absolute;
+  top: 10px;
+  left: 25%;
+  z-index: 5;
+  background-color: #fff;
+  padding: 5px;
+  border: 1px solid #999;
+  text-align: center;
+  font-family: 'Roboto','sans-serif';
+  line-height: 30px;
+  padding-left: 10px;
 }
