--- a/main.css
+++ b/main.css
@@ -11,11 +11,15 @@ html, body {
   min-height: 100px;
 }
 
-#customers, #accounts, #bills, #purchase {
-  border: 2px solid red;
+#customers, #accounts, #bills, #purchases {
+  border: 2px solid black;
   min-width: 150px;
-  max-height: 300px;
-  overflow:auto;
+  max-height: 18%;
+  overflow: scroll;
+}
+
+table td {
+  vertical-align: top;
 }
 
 #map { 
